--- a/config/routes/framework.yaml
+++ b/config/routes/framework.yaml
@@ -1,3 +1,7 @@
+when@pro:
+    _errors:
+        resource: '@TwigBundle/Resources/config/routing/errors.xml'
+        prefix: /_error
 when@dev:
     _errors:
         resource: '@FrameworkBundle/Resources/config/routing/errors.xml'
