--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,33 +2,83 @@ security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        App\Entity\User:
+            algorithm: auto
+        App\Entity\Team:
+            algorithm: auto
+
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         # used to reload user from session & other features (e.g. switch_user)
+        users_in_memory: {memory: null}
         app_team_provider:
             entity:
                 class: App\Entity\Team
                 property: email
         # used to reload user from session & other features (e.g. switch_user)
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
+        all_users:
+            chain:
+                # ordonner la priorite des utilisateurs
+                provider: [app_team_provider, app_user_provider]
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-        main:
-            lazy: true
+        admin_secure_area:
+            pattern: ^/admin
             provider: app_team_provider
-            custom_authenticator: App\Security\TeamAuthentificator
+            form_login:
+                login_path: admin_login
+                check_path: admin_login
+                default_target_path: app_admin
+                username_parameter: login[email]
+                password_parameter: login[password]
+                enable_csrf: true
             logout:
-                path: app_logout
+                path: admin_logout
                 # where to redirect after logout
-                target: app_login
+                target: admin_login
+                invalidate_session: true
+            custom_authenticator: App\Security\TeamAuthentificator
+            entry_point: form_login
 
             remember_me:
                 secret: '%kernel.secret%'
                 lifetime: 604800
                 path: /
                 always_remember_me: true
+        user_secure_area:
+            pattern: ^/account
+            provider: app_user_provider
+            form_login:
+                login_path: user_login
+                check_path: user_login
+                default_target_path: user_login
+                username_parameter: login[email]
+                password_parameter: login[password]
+                enable_csrf: true
+            logout:
+                path: user_logout
+                # where to redirect after logout
+                target: user_login
+                invalidate_session: true
+            custom_authenticator: App\Security\UserAuthentificator
+            entry_point: form_login
 
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 604800
+                path: /
+                always_remember_me: true
+        # Sur le main mettre l'authorisation le plus faible.
+        main:
+            lazy: true
+            pattern: ^/
+            provider: app_team_provider
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
@@ -37,8 +87,16 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
+    role_hierarchy:
+        ROLE_IDENTIFIED: ROLE_USER
+        ROLE_VISITOR: ROLE_IDENTIFIED
+        ROLE_ADMIN: [ ROLE_VISITOR, ROLE_ALLOWED_TO_SWITCH ]
+
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin/login, roles: PUBLIC_ACCESS }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/account/login, roles: PUBLIC_ACCESS }
+        - { path: ^/account, roles: ROLE_IDENTIFIED }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
