--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -52,7 +52,7 @@ security:
                 path: /
                 always_remember_me: true
         user_secure_area:
-            pattern: ^/account
+            pattern: ^/
             provider: app_user_provider
             form_login:
                 login_path: user_login
@@ -64,7 +64,7 @@ security:
             logout:
                 path: user_logout
                 # where to redirect after logout
-                target: user_login
+                target: app_home
                 invalidate_session: true
             custom_authenticator: App\Security\UserAuthentificator
             entry_point: form_login
