--- a/.env
+++ b/.env
@@ -24,9 +24,9 @@ APP_SECRET=25aaa7fd0dd2ccd42ff4212b895f5f14
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://cdafcp20221102ap_roota:yPSGBPPjhsOj@127.0.0.1:3306/cdafcp20221102ap_bd_blog?serverVersion=8.0.32&charset=utf8mb4"
-DATABASE_URL="mysql://cdafcp20221102ap_roota:yPSGBPPjhsOj@127.0.0.1:3306/cdafcp20221102ap_bd_blog?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+# DATABASE_URL="mysql://app:!ChangeMa!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
+# DATABASE_URL="mysql://app:!changeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
